--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-a": "^1.0.1",
     "react-native-animated-loader": "0.0.7",
-    "react-native-web": "^0.11.4"
+    "react-native-web": "^0.11.4",
+    "react-navigation": "^4.0.10",
+    "react-navigation-drawer": "^2.2.2",
+    "react-navigation-stack": "^1.9.1",
+    "react-navigation-tabs": "^2.5.5"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.1",
